RESOLVED FIXED255337
Fix WebContent crash with null String in font-feature-values
https://bugs.webkit.org/show_bug.cgi?id=255337
Summary Fix WebContent crash with null String in font-feature-values
Matthieu Dubet
Reported 2023-04-12 07:20:59 PDT
Fix WebContent crash with null String in font-feature-values Example: @font-feature-values "Plex Serif" { @styleset { alt-a: 1; alt-g: 2; } @stylistic { alternates: 1; } } @font-feature-values "Dancing Script" { @stylistic { alternates: 1; } } .container1 * { font-variant-alternates: styleset(alt-a); } .container1 .script { font-variant-alternates: stylistic(alternates); } .inactive .container1 * { font-variant-alternates: normal; } https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Fonts/OpenType_fonts_guide
Attachments
Matthieu Dubet
Comment 1 2023-04-12 07:21:14 PDT
Matthieu Dubet
Comment 2 2023-04-12 07:46:57 PDT
EWS
Comment 3 2023-04-12 13:09:09 PDT
Committed 262880@main (3ac8b5512c4d): <https://commits.webkit.org/262880@main> Reviewed commits have been landed. Closing PR #12652 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.