Use String::isNull instead of std::optional<String> https://bugs.webkit.org/show_bug.cgi?id=255337 rdar://107758556

Reviewed by Brent Fulgham.

std::optional<String> doesn't make sense because String
has its own representation of invalid (isNull).
In this case, the optional check was always true, thus
passing a null string to the find() method.

* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/font-variant-alternates-03.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/font-variant-alternates-06.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/font-variant-alternates-09.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/font-variant-alternates-12.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/font-variant-alternates-15.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/font-variant-alternates-18.html:
* Source/WebCore/platform/text/TextFlags.cpp:
(WebCore::computeFeatureSettingsFromVariants):

Canonical link: https://commits.webkit.org/262880@main